--- a/02college/css/style.css
+++ b/02college/css/style.css
@@ -59,7 +59,7 @@ header#header .headerWrap .header1 .headerTab a{
     display: block;text-align: center;line-height: 40px;
     color:#fff;font-weight: bold;background: #00163B;
 }
-header#header .headerWrap .header1 .headerTab a:active,
+header#header .headerWrap .header1 .headerTab a.active,
 header#header .headerWrap .header1 .headerTab a:hover{background: #fff;color:#6B6B6B;}
 
 header#header .headerWrap .header1 .util{float: right;}
@@ -285,7 +285,7 @@ div#content .content3{
     width: 1200px;margin: 0 auto;
     background: #fff;position: relative;
 }
-div#content .content3 .left{padding: 0 40px;float: left;}
+div#content .content3 .left{padding: 0 40px;float: left;width: 300px;}
 div#content .content3 .left li{
     float: left;
     font-family: 'Noto Sans KR', sans-serif;font-size: 20px;line-height: 60px;
@@ -296,21 +296,24 @@ div#content .content3 .bar{
     width: 2px;height: 60px;background: #6B6B6B;
     position: absolute;left: 298px;top: 0;
 }
-div#content .content3 .right{float: left;position: relative;}
+div#content .content3 .right{float: left;position: relative;width: 900px;}
 div#content .content3 .right p{
     font-size: 16px;_padding: 21px 39px;
     color: #585858;font-weight: 700;
     position: absolute;top: 21px;left: 39px;
 }
+div#content .content3 .right .slider3Wrap{width: 570px;position: absolute;right:0;}
 div#content .content3 .right .slider3{
-    position: absolute; right: 0;
     font-size: 14px;color: #6B6B6B;
-    position: relative;
+    _position: relative;
 }
 
-div#content .content3 .right .slider3 .list{height: 60px;line-height: 60px;width: 570px;}
-div#content .content3 .right .slider3 .ud_btn{position: absolute; right: 0;height: 60px;}
-div#content .content3 .right .slider3 .ud_btn .downBtn{margin-bottom: 0;}
+div#content .content3 .right .slider3 .list{height: 60px;line-height: 60px;_width: 570px;}
+div#content .content3 .right .slider3Wrap .ud_btn{
+    position: absolute; right: 0;top: 0;
+    height: 60px;
+}
+div#content .content3 .right .slider3Wrap .ud_btn .downBtn{margin-bottom: 0;}
 
 /* footer */
 #footer .footerWrap{width: 1200px;margin: 0 auto;height: 160px;}
