--- a/netmarble/css/style.css
+++ b/netmarble/css/style.css
@@ -90,8 +90,15 @@ nav{width: 510px;position: absolute;right: 0;margin: 0 10px;}
 #section1 .sectionWrap .sectionM li{
     float: left;width: 384px;
     margin-right: 30px;margin-bottom: 160px;
+    cursor: pointer;
 }
 #section1 .sectionWrap .sectionM li:last-child{margin-right: 0;}
+
+#section1 .sectionWrap .sectionM li:hover .con{
+    transform:translateY(-15px);
+    box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
 #section1 .sectionWrap .sectionM li .txt{padding: 20px 16px 0 16px;}
 #section1 .sectionWrap .sectionM li .txt .txtU{
     position: relative;font-size: 21px;
@@ -127,9 +134,9 @@ nav{width: 510px;position: absolute;right: 0;margin: 0 10px;}
 #section2{background: #f7f8f9;color: #1e1e1e;width: 100%;}
 #section2 .section2Wrap{padding: 160px 0;margin: 0 auto;width: 1215px;}
 
-#section2 .section2Wrap .section2_title{position: relative;margin-bottom: 56px;}
+#section2 .section2Wrap .section2_title{position: relative;_margin-bottom: 56px;}
 #section2 .section2Wrap .section2_title h3{
-    font-size: 44px;font-weight: 700;letter-spacing:-2px;
+    font-size: 44px;font-weight: 700;letter-spacing:-2px;margin-bottom: 28px;
 }
 #section2 .section2Wrap .section2_title h3:after{
     content:"";display: block;margin-top: 20px;
@@ -147,10 +154,17 @@ nav{width: 510px;position: absolute;right: 0;margin: 0 10px;}
     border: 0 none;cursor: pointer;
 }
 
+#section2 .section2Wrap .bx-wrapper .bx-viewport{margin: 32px 0;height: 530px;}
 #section2 .section2Wrap .section_card li{
     width: 360px;height: 466px;background: #fff;
     position: relative;
 }
+#section2 .section2Wrap .section_card li:hover{
+    transform:translateY(-15px);
+    box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
 #section2 .section2Wrap .section_card li .txtbox{
     padding: 32px;letter-spacing:-0.6px;margin-bottom: 30px;
 }
