--- a/netmarble/css/style.css
+++ b/netmarble/css/style.css
@@ -155,6 +155,7 @@ nav{width: 510px;position: absolute;right: 0;margin: 0 10px;}
 }
 
 #section2 .section2Wrap .bx-wrapper .bx-viewport{margin: 32px 0;height: 530px;}
+#section2 .section2Wrap .section_card{cursor: pointer;}
 #section2 .section2Wrap .section_card li{
     width: 360px;height: 466px;background: #fff;
     position: relative;
@@ -195,6 +196,7 @@ footer#footer .footerWrap li{
     float: left;font-size: 12px;font-weight: 500;
     line-height: 20px;color:#9b9b9b;letter-spacing:-0.6px;
     margin: 0 14px;position: relative;
+    cursor: pointer;
 }
 footer#footer .footerWrap li:first-child{margin-left: 0;}
 footer#footer .footerWrap li:last-child::after{display: none;}
