--- a/netmarble/css/style.css
+++ b/netmarble/css/style.css
@@ -159,7 +159,10 @@ nav{width: 510px;position: absolute;right: 0;_margin: 0 10px;}
     height: 38px;border-radius: 19px;
 }
 
-/* #section2 .section2Wrap .bx-wrapper .bx-viewport{height: 530px;} */
+#section2 .section2Wrap .bx-wrapper .bx-viewport{
+    height: 530px !important;
+    width: 1215px !important;
+}
 #section2 .section2Wrap .section_card{cursor: pointer;}
 #section2 .section2Wrap .section_card li{
     width: 360px;height: 466px;background: #fff;
@@ -197,15 +200,15 @@ footer#footer .footerWrap p{
     color:#757575;letter-spacing:-0.6px;
     margin-bottom: 46px;
 }
-footer#footer .footerWrap li{
+footer#footer .footerWrap .policy>li{
     float: left;font-size: 12px;font-weight: 500;
     line-height: 20px;color:#9b9b9b;letter-spacing:-0.6px;
     margin: 0 14px;position: relative;
     cursor: pointer;
 }
-footer#footer .footerWrap li:first-child{margin-left: 0;}
-footer#footer .footerWrap li:last-child::after{display: none;}
-footer#footer .footerWrap li:after{
+footer#footer .footerWrap .policy li:first-child{margin-left: 0;}
+footer#footer .footerWrap .policy li:last-child::after{display: none;}
+footer#footer .footerWrap .policy li:after{
     content:"";width: 1px;height: 12px;
     background: #9b9b9b;display: block;
     position: absolute;right: -14px;top: 5px;
@@ -216,11 +219,35 @@ footer#footer .footerWrap .sns img{margin-left: 24px;cursor: pointer;}
 
 footer#footer .footerWrap .familysite{
     position: absolute;top: 0;right: 0;
+    width: 180px;
 }
-footer#footer .footerWrap .familysite button{
+footer#footer .footerWrap .familysite .fsite{
     background: #080808;color:#747474;
     font-size: 11px;letter-spacing:-0.6px;line-height: 32px;
-    width: 180px;height: 32px;
+    width: 100%;height: 32px;
     border: 0 none;text-align: left;padding: 0 25px;
-    cursor: pointer;
+    cursor: pointer;position: relative;display: block;
+    font-weight: 700; overflow: hidden;
 }
+/* footer#footer .footerWrap .familysite button{
+    background: #080808;color:#747474;
+    font-size: 11px;letter-spacing:-0.6px;line-height: 32px;
+    width: 100%;height: 32px;
+    border: 0 none;text-align: left;padding: 0 25px;
+    cursor: pointer;position: relative;display: block;
+    font-weight: 700; overflow: hidden;
+} */
+
+/* footer#footer .footerWrap .familysite .fsite{
+    position: absolute;right: 0;bottom: 32px;
+    background: #080808; padding: 0 8px;width: 180px;
+    /* display: none; */
+} */
+/* footer#footer .footerWrap .familysite .fsite>li{
+    border-bottom: 1px solid #1e1e1e;padding: 0 17px;
+} */
+/* footer#footer .footerWrap .familysite .fsite>li>a{
+    color:#747474;
+    font-size: 11px;letter-spacing:-0.6px;line-height: 32px;
+    font-weight: 500;
+} */
