--- a/netmarble/css/style.css
+++ b/netmarble/css/style.css
@@ -236,17 +236,17 @@ footer#footer .footerWrap .familysite .fsite{
     border: 0 none;text-align: left;padding: 0 25px;
     cursor: pointer;position: relative;display: block;
     font-weight: 700; overflow: hidden;
-} */
+}
 
-/* footer#footer .footerWrap .familysite .fsite{
+footer#footer .footerWrap .familysite .fsite{
     position: absolute;right: 0;bottom: 32px;
     background: #080808; padding: 0 8px;width: 180px;
-    /* display: none; */
-} */
-/* footer#footer .footerWrap .familysite .fsite>li{
+    display: none;
+}
+footer#footer .footerWrap .familysite .fsite>li{
     border-bottom: 1px solid #1e1e1e;padding: 0 17px;
-} */
-/* footer#footer .footerWrap .familysite .fsite>li>a{
+}
+footer#footer .footerWrap .familysite .fsite>li>a{
     color:#747474;
     font-size: 11px;letter-spacing:-0.6px;line-height: 32px;
     font-weight: 500;
