--- a/03tour/css/style.css
+++ b/03tour/css/style.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 
 body{font-family: 'Nanum Gothic', sans-serif;}
+.mb14{margin-bottom: 14px;}
+.mb23{margin-bottom: 23px;}
 
 /* header */
 .hdTopWrap{background: #0762a1 url(../images/header.jpg) no-repeat center;}
@@ -74,4 +76,71 @@ div#content{
     background-size: auto, cover;
     background-position:center;
     height: 1200px;
+}
+.rsv_slider{width: 482px;height: 300px;position: relative;}
+.rsv_slider .slider01Pager{
+    position: absolute;top: 0;left: 0;
+    width: 132px;height: 300px;
+    background: #006599;
+}
+.rsv_slider .slider01Pager .bxpager{height: 100%;}
+.rsv_slider .slider01Pager .bxpager>a{
+    display: block;height: 25%;
+    text-align: center;
+    display: flex;justify-content: center;align-items: center;
+}
+.rsv_slider .slider01Pager .bxpager>a.active{background: #fff;}
+
+/* .slider01{position: absolute;right: 0 !important;top: 0;} */
+.slider01>li{
+    background: #fff;
+    _padding: 28px 36px 23px 36px;width: 350px;
+    padding: 10px 36px;
+    position: absolute;right: 0;
+}
+fieldset{border: 0;}
+.blind{display: block;position: absolute;left: 0;top: -9999px;}
+.form{width: 100%;}
+.form label{display: block;padding: 8px 0;font-size: 14px;color:#414141;}
+.form select.golo{
+    width:276px;height: 32px;
+    border: 2px solid #ededed;
+    border-radius: 5px;
+    text-indent: 10px;color: #c4c4c4;
+}
+.form .left, .form .right{width: 131px;float: left;}
+.form .left{margin-right: 13px;}
+.form .left>input, .form .right>input{
+    width: 100%;height: 31px;
+    font-size: 13px;font-weight: bold;
+    border: 2px solid #ededed;
+    border-radius: 5px;
+    text-indent:1px;color: #c4c4c4;
+}
+.form .gleft, .form .gright{float: left;}
+.form .gleft{margin-right: 21px;width: 117px;}
+.form .gleft>select{
+    width: 117px;height: 32px;
+    border: 2px solid #ededed;
+    border-radius: 5px;
+    text-indent: 10px;color: #c4c4c4;
+}
+.form .adult, .form .kids{float: left;}
+.form .adult{margin-right: 5px;}
+.form .adult>input, .form .kids>input{
+    width: 66px;height: 32px;
+    font-size: 13px;font-weight: bold;
+    border: 2px solid #ededed;
+    border-radius: 5px;
+    text-indent:15px;color: #c4c4c4;
+}
+.form .btn_rsv{
+    width: 278px;height: 38px;
+    background-color: #EA4F1F;
+    background-image: url(../images/submit.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 0;border-radius: 3px;
+    text-indent: -9999px;
+    cursor: pointer;
 }
