--- a/gabia/css/style.css
+++ b/gabia/css/style.css
@@ -1,3 +1,70 @@
 @charset "utf-8";
 
 body{font-family: 'Noto Sans KR', sans-serif;}
+
+/* mobile */
+@media screen and (max-width: 767px){
+    #header{
+        height: 50px;padding: 10px 0;
+    }
+    #header .headerWrap{
+        display: flex;justify-content: space-between;align-items: center;
+        padding: 0 20px;position: relative;
+    }
+    #header .headerWrap h1{
+        background: url(../images/mainlogo.png) no-repeat center;
+        background-size: 134.4px;
+        height: 28px;width: 100%;
+        text-indent: -9999px;
+        position: relative;top: 0;left: 0;
+    }
+    #header .headerWrap ul>li{
+        display: none;
+        w
+    }
+}
+/* mobile */
+
+/* pc */
+@media screen and (min-width:768px){
+    /* header */
+    #header{border-bottom: 1px solid #eee;width: 100%;}
+    #header .headerWrap{
+        max-width: 1440px;height: 60px;width: 100%;
+        margin: 0 auto;padding: 0 20px;
+        display: flex;justify-content: space-between;align-items: center;
+    }
+    #header .headerWrap h1{
+        width: 168px;height: 35px;
+        background: url(../images/mainlogo.png) no-repeat center;
+        text-indent: -9999px;
+    }
+    #header .headerWrap ul>li{float: left;margin: 0 15px;}
+    #header .headerWrap ul>li a{
+        display: block;text-align: center;line-height: 60px;
+        font-size: 15px;letter-spacing:-0.75px;color: #333333;
+        padding: 0 15px;position: relative;
+    }
+    #header .headerWrap ul>li a:after{
+        content: "";position: absolute;bottom: -1px;left: 50%;
+        transform: translateX(-50%);
+        border-bottom: 2px solid #2598e8;
+        transition: 0.3s;width: 0;
+    }
+    #header .headerWrap ul>li:hover a:after{
+        width: 100%;
+    }
+    .toggle{display: none;}
+
+    /* slider */
+    .swiper-slide{position: relative;height: 643px;}
+    .txtWrap01{
+        position: absolute;top: 0;left:calc(50% - 700px);
+        padding-top: 60px;margin-top: 120px;
+        color: white;letter-spacing:-0.75px;
+    }
+    .txtWrap01 img{position: absolute;top: 0;left: 0;}
+    .txtWrap01 h3{font-size:50px;font-weight: 500;margin-bottom: 24px;line-height: 60px;}
+    .txtWrap01 p{font-size:19px;font-weight: 200;}
+}
+/* pc */
